--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.1",
-    "uuid": "^9.0.0"
+    "socket.io": "^4.7.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
